--- a/src/pages/vitals/vitals.html
+++ b/src/pages/vitals/vitals.html
@@ -7,8 +7,45 @@
 </ion-header>
 
 <ion-content padding>
-  <p>
-    This is a perfect starting point for a page with primarily text content. The
-    body is padded nicely and ready for prose.
-  </p>
+  <div class="flex-container">
+    <ion-grid>
+      <ion-row>
+        <ion-col col-lg-6 col-md-8>
+          <h1>Pacwest <span class="primary">Vitals</span></h1>
+          <p>Set to not only redesign its public facing lobby, new renovations will make PACWEST an irresistable workplace with a new fitness center, tenant lounge, bicycle parking, showers and lockers for the wellness of its tenants.</p>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col col-lg-6 col-md-6 col-sm-12>
+          <ul class="no-bullet">
+            <li>30 floors</li>
+            <li>Panoramic views</li>
+            <li>Outdoor terraces</li>
+            <li>24-hour onsite security</li>
+            <li>Structural steel frame with poured concrete decking</li>
+            <li>Glass entrances/storefronts</li>
+            <li>Common area showers</li>
+            <li>Conference rooms</li>
+            <li>Starbucks</li>
+            <li>Dry cleaners</li>
+            <li>Internal stairwells</li>
+          </ul>
+        </ion-col>
+        <ion-col col-lg-6 col-md-6 col-sm-12>
+          <ul class="no-bullet">
+            <li>3-level parking garage</li>
+            <li>Onsite management office and engineering</li>
+            <li>Telecom: AT&amp;T, Integra Verizon, Level3, Comcast, CenturyLink (fiber connected)</li>
+            <li>Energy Star rating = 85</li>
+            <li>Tri-Met (Max) stops at the both entrances to the building</li>
+            <li>Building bicycle parking</li>
+            <li>Within walking distance of numerous shops, restaurants and entertainment</li>
+            <li>Free valet parking service</li>
+          </ul>
+        </ion-col>
+      </ion-row>
+
+    </ion-grid>
+  </div>
 </ion-content>
