Revert "Clean Up pages"
This reverts commit d1972e12dc91a3705dcecb15121202f4d67dface.

--- a/src/pages/content/content.html
+++ b/src/pages/content/content.html
@@ -1,7 +1,7 @@
-<ion-header hidden="hidden">
+<ion-header>
   <ion-navbar>
     <ion-title>
-      Vitals
+      Location
     </ion-title>
   </ion-navbar>
 </ion-header>
