--- a/src/pages/gallery/gallery.html
+++ b/src/pages/gallery/gallery.html
@@ -15,78 +15,42 @@
         <!-- Main Gallery -->
         <ion-col col-10>
           <div *ngIf="selectedGallery == 'exterior'">
-
-            <ion-row>
-              <ion-col col-lg-12>
-                <ion-slides>
-                  <ion-slide>
-                    <img class="galleryItem" src="assets/img/exterior/exterior-01.jpg" />
-                  </ion-slide>
-                  <ion-slide>
-                    <img class="galleryItem" src="assets/img/exterior/exterior-02.jpg" />
-                  </ion-slide>
-                  <ion-slide>
-                    <img class="galleryItem" src="assets/img/exterior/exterior-03.jpg" />
-                  </ion-slide>
-                  <ion-slide>
-                    <img class="galleryItem" src="assets/img/exterior/exterior-04.jpg" />
-                  </ion-slide>
-                  <ion-slide>
-                    <img class="galleryItem" src="assets/img/exterior/exterior-05.jpg" />
-                  </ion-slide>
-                  <ion-slide>
-                    <img class="galleryItem" src="assets/img/exterior/exterior-06.jpg" />
-                  </ion-slide>
-                  <ion-slide>
-                    <img class="galleryItem" src="assets/img/exterior/exterior-07.jpg" />
-                  </ion-slide>
-                  <ion-slide>
-                    <img class="galleryItem" src="assets/img/exterior/exterior-08.jpg" />
-                  </ion-slide>
-                </ion-slides>
-              </ion-col>
-            </ion-row>
-            <!-- <ion-card *ngFor="let item of galleryExterior" col-2>
+            <ion-card *ngFor="let item of galleryExterior" col-2>
               <img class="galleryItem" [src]="item.image" />
-            </ion-card> -->
+            </ion-card>
 
             <ion-row>
-              <ion-col col-lg-2>
-                <ion-card>
-                  <img class="galleryItem" src="assets/img/exterior/exterior-01.jpg" />
-                </ion-card>
-              </ion-col>
-              <ion-col col-lg-2>
+              <ion-col col-2>
                 <ion-card>
                   <img class="galleryItem" src="assets/img/exterior/exterior-02.jpg" />
                 </ion-card>
               </ion-col>
-              <ion-col col-lg-2>
+              <ion-col col-2>
                 <ion-card>
                   <img class="galleryItem" src="assets/img/exterior/exterior-03.jpg" />
                 </ion-card>
               </ion-col>
-              <ion-col col-lg-2>
+              <ion-col col-2>
                 <ion-card>
                   <img class="galleryItem" src="assets/img/exterior/exterior-04.jpg" />
                 </ion-card>
               </ion-col>
-              <ion-col col-lg-2>
+              <ion-col col-2>
                 <ion-card>
                   <img class="galleryItem" src="assets/img/exterior/exterior-05.jpg" />
                 </ion-card>
               </ion-col>
-              <ion-col col-lg-2>
+              <ion-col col-2>
                 <ion-card>
                   <img class="galleryItem" src="assets/img/exterior/exterior-06.jpg" />
                 </ion-card>
               </ion-col>
-              <ion-col col-lg-2>
+              <ion-col col-2>
                 <ion-card>
                   <img class="galleryItem" src="assets/img/exterior/exterior-07.jpg" />
                 </ion-card>
               </ion-col>
-              <ion-col col-lg-2>
+              <ion-col col-2>
                 <ion-card>
                   <img class="galleryItem" src="assets/img/exterior/exterior-08.jpg" />
                 </ion-card>
@@ -97,74 +61,42 @@
 
 
           <div *ngIf="selectedGallery == 'interior'">
-            <ion-row>
-              <ion-col col-lg-12>
-                <ion-slides>
-                  <ion-slide>
-                    <img class="galleryItem" src="assets/img/interior/interior-01.jpg" />
-                  </ion-slide>
-                  <ion-slide>
-                    <img class="galleryItem" src="assets/img/interior/interior-02.jpg" />
-                  </ion-slide>
-                  <ion-slide>
-                    <img class="galleryItem" src="assets/img/interior/interior-03.jpg" />
-                  </ion-slide>
-                  <ion-slide>
-                    <img class="galleryItem" src="assets/img/interior/interior-04.jpg" />
-                  </ion-slide>
-                  <ion-slide>
-                    <img class="galleryItem" src="assets/img/interior/interior-05.jpg" />
-                  </ion-slide>
-                  <ion-slide>
-                    <img class="galleryItem" src="assets/img/interior/interior-06.jpg" />
-                  </ion-slide>
-                  <ion-slide>
-                    <img class="galleryItem" src="assets/img/interior/interior-07.jpg" />
-                  </ion-slide>
-                  <ion-slide>
-                    <img class="galleryItem" src="assets/img/interior/interior-08.jpg" />
-                  </ion-slide>
-                </ion-slides>
-              </ion-col>
-            </ion-row>
+            <ion-card>
+              <img class="galleryItem" src="assets/img/interior/interior-01.jpg" />
+            </ion-card>
 
             <ion-row>
-              <ion-col col-2>
-                <ion-card>
-                  <img class="galleryItem" src="assets/img/interior/interior-01.jpg" />
-                </ion-card>
-              </ion-col>
-              <ion-col col-2>
+              <ion-col col-3>
                 <ion-card>
                   <img class="galleryItem" src="assets/img/interior/interior-02.jpg" />
                 </ion-card>
               </ion-col>
-              <ion-col col-2>
+              <ion-col col-3>
                 <ion-card>
                   <img class="galleryItem" src="assets/img/interior/interior-03.jpg" />
                 </ion-card>
               </ion-col>
-              <ion-col col-2>
+              <ion-col col-3>
                 <ion-card>
                   <img class="galleryItem" src="assets/img/interior/interior-04.jpg" />
                 </ion-card>
               </ion-col>
-              <ion-col col-2>
+              <ion-col col-3>
                 <ion-card>
                   <img class="galleryItem" src="assets/img/interior/interior-05.jpg" />
                 </ion-card>
               </ion-col>
-              <ion-col col-2>
+              <ion-col col-3>
                 <ion-card>
                   <img class="galleryItem" src="assets/img/interior/interior-06.jpg" />
                 </ion-card>
               </ion-col>
-              <ion-col col-2>
+              <ion-col col-3>
                 <ion-card>
                   <img class="galleryItem" src="assets/img/interior/interior-07.jpg" />
                 </ion-card>
               </ion-col>
-              <ion-col col-2>
+              <ion-col col-3>
                 <ion-card>
                   <img class="galleryItem" src="assets/img/interior/interior-08.jpg" />
                 </ion-card>
@@ -174,59 +106,32 @@
 
 
           <div *ngIf="selectedGallery == 'rendering'">
-            <ion-row>
-              <ion-col col-lg-12>
-                <ion-slides>
-                  <ion-slide>
-                    <img class="galleryItem" src="assets/img/interior/interior-01.jpg" />
-                  </ion-slide>
-                  <ion-slide>
-                    <img class="galleryItem" src="assets/img/interior/interior-02.jpg" />
-                  </ion-slide>
-                  <ion-slide>
-                    <img class="galleryItem" src="assets/img/interior/interior-03.jpg" />
-                  </ion-slide>
-                  <ion-slide>
-                    <img class="galleryItem" src="assets/img/interior/interior-04.jpg" />
-                  </ion-slide>
-                  <ion-slide>
-                    <img class="galleryItem" src="assets/img/interior/interior-05.jpg" />
-                  </ion-slide>
-                  <ion-slide>
-                    <img class="galleryItem" src="assets/img/interior/interior-06.jpg" />
-                  </ion-slide>
-                  <ion-slide>
-                    <img class="galleryItem" src="assets/img/interior/interior-07.jpg" />
-                  </ion-slide>
-                  <ion-slide>
-                    <img class="galleryItem" src="assets/img/interior/interior-08.jpg" />
-                  </ion-slide>
-                </ion-slides>
-              </ion-col>
-            </ion-row>
+            <ion-card>
+              <img class="galleryItem" src="assets/img/exterior/exterior-01.jpg" />
+            </ion-card>
 
             <ion-row>
-              <ion-col col-2>
+              <ion-col col-3>
                 <ion-card>
                   <img class="galleryItem" src="assets/img/exterior/exterior-02.jpg" />
                 </ion-card>
               </ion-col>
-              <ion-col col-2>
+              <ion-col col-3>
                 <ion-card>
                   <img class="galleryItem" src="assets/img/exterior/exterior-03.jpg" />
                 </ion-card>
               </ion-col>
-              <ion-col col-2>
+              <ion-col col-3>
                 <ion-card>
                   <img class="galleryItem" src="assets/img/exterior/exterior-04.jpg" />
                 </ion-card>
               </ion-col>
-              <ion-col col-2>
+              <ion-col col-3>
                 <ion-card>
                   <img class="galleryItem" src="assets/img/exterior/exterior-05.jpg" />
                 </ion-card>
               </ion-col>
-              <ion-col col-2>
+              <ion-col col-3>
                 <ion-card>
                   <img class="galleryItem" src="assets/img/exterior/exterior-06.jpg" />
                 </ion-card>
